--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,11 +1,15 @@
 .footer__container{
+    width: 375px;
     padding: 40px 16px;
-    background-color: var(--black);
+    margin: 0 auto;
+    // background-color: var(--black);
     @include tablet{
+        width: 744px;
         padding: 48px 40px 40px 40px;
     }
     @include desktop{
-         padding: 48px 80px 40px 80px;
+        width: 1440px;
+        padding: 48px 80px 40px 80px;
     }
 }
 .footer__container__first{
