--- a/sass/layouts/_section-advantages.scss
+++ b/sass/layouts/_section-advantages.scss
@@ -1,14 +1,23 @@
 .advantages__container{
     position: relative;
+    width: 375px;
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
     align-items: end;
-    padding-top: 24px;
+    padding: 24px 16px 80px 16px;
+    margin: 0 auto;
+    // padding-top: 24px;
     @include tablet{
-        padding-top: 32px;
+        // flex-direction: row;
+        width: 744px;
+        padding: 32px 40px 120px 40px ;
+        // padding-top: 32px;
     }
     @include desktop{
-         padding-top: 32px;
+        width: 1440px;
+        padding: 32px 80px 16px 80px;
+        // flex-direction: row;
+        //  padding-top: 32px;
     }
 }
 .advantages__list{
