created  page gallery

--- a/css/main.css
+++ b/css/main.css
@@ -2131,4 +2131,34 @@ img {
   .menu__mobile-instagram {
     display: none;
   }
+}
+
+.gallery__hero__container {
+  width: 375px;
+  padding: 93px 16px 20px 16px;
+  margin: 0 auto;
+  border-bottom: 1px solid var(--beidg);
+}
+@media screen and (min-width: 744px) and (max-width: 1439px) {
+  .gallery__hero__container {
+    width: 744px;
+    padding: 140px 40px 50px 40px;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .gallery__hero__container {
+    width: 1440px;
+    padding: 181px 80px 48px 80px;
+  }
+}
+
+.gallery__title {
+  margin: 0;
+}
+
+.gallery__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
 }/*# sourceMappingURL=main.css.map */
