--- a/css/main.css
+++ b/css/main.css
@@ -1121,7 +1121,7 @@ img {
   position: relative;
   width: 375px;
   margin: 0 auto;
-  padding: 48px 16px;
+  padding: 48px 16px 80px 16px;
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .testimonial__container {
@@ -1169,7 +1169,7 @@ img {
 
 .testimonials__button {
   position: absolute;
-  bottom: 24px;
+  bottom: 60px;
   left: 12px;
   border: 2px solid var(--beidg);
   border-radius: 24px;
@@ -1715,10 +1715,12 @@ img {
 .talk__container {
   position: relative;
   width: 375px;
-  height: 732px;
+  height: 832px;
   margin: 0 auto;
   background-image: url("https://res.cloudinary.com/ddtdtthqh/image/upload/v1748541261/zhuraki/last%20section/mob_1x-min_tyeudg.jpg");
   padding: 64px 16px 28px 16px;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .talk__container {
@@ -2135,9 +2137,8 @@ img {
 
 .gallery__hero__container {
   width: 375px;
-  padding: 93px 16px 20px 16px;
+  padding: 93px 16px 80px 16px;
   margin: 0 auto;
-  border-bottom: 1px solid var(--beidg);
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .gallery__hero__container {
@@ -2153,12 +2154,28 @@ img {
 }
 
 .gallery__title {
-  margin: 0;
+  margin-bottom: 24px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid var(--beidg);
 }
 
 .gallery__list {
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
+  flex-wrap: wrap;
+  gap: 15px;
+  margin-bottom: 20px;
+}
+
+.gallery__button__load {
+  border: 2px solid var(--beidg);
+  border-radius: 24px;
+  padding: 10px 16px;
+  width: 100%;
+  font-family: var(--font-family);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 140%;
+  color: var(--black-2);
 }/*# sourceMappingURL=main.css.map */
