--- a/sass/layouts/_section-testimonials.scss
+++ b/sass/layouts/_section-testimonials.scss
@@ -2,7 +2,7 @@
     position: relative;
     width: 375px;
     margin: 0 auto;
-    padding: 48px 16px;
+    padding: 48px 16px 80px 16px;
     @include tablet{
         width: 744px;
         padding: 48px 40px;
@@ -40,7 +40,7 @@
 }
 .testimonials__button{
     position: absolute;
-    bottom: 24px;
+    bottom: 60px;
     left: 12px;
     border: 2px solid var(--beidg);
     border-radius: 24px;
