--- a/sass/layouts/_gallery-section-hero.scss
+++ b/sass/layouts/_gallery-section-hero.scss
@@ -1,11 +1,15 @@
 .gallery__hero__container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
     width: 375px;
     padding: 93px 16px 80px 16px;
     margin: 0 auto;
    
      @include tablet {
         width: 744px;
-        padding: 140px 40px 50px 40px;
+        padding: 140px 40px 120px 40px;
         }
     @include desktop {
         width: 1440px;
@@ -13,9 +17,11 @@
         }
 }
 .gallery__title{
+    width: 100%;
     margin-bottom: 24px;
     padding-bottom: 20px;
     border-bottom: 1px solid var(--beidg);
+  
 }
 .gallery__list{
     display: flex;
@@ -27,6 +33,7 @@
 }
 .gallery__button__load{
     border: 2px solid var(--beidg);
+    background-color: transparent;
     border-radius: 24px;
     padding: 10px 16px;
     width: 100%;
@@ -35,4 +42,10 @@
     font-size: 16px;
     line-height: 140%;
     color: var(--black-2);
+    @include tablet{
+        width: 194px;
+    }
+    @include desktop{
+        width: 194px;
+    }
 }
