--- a/sass/layouts/_section-advantages.scss
+++ b/sass/layouts/_section-advantages.scss
@@ -2,7 +2,7 @@
     position: relative;
     width: 375px;
     display: flex;
-    // flex-direction: column;
+    flex-direction: column;
     align-items: end;
     padding: 24px 16px 80px 16px;
     margin: 0 auto;
@@ -16,7 +16,7 @@
     @include desktop{
         width: 1440px;
         padding: 32px 80px 16px 80px;
-        // flex-direction: row;
+        flex-direction: column;
         //  padding-top: 32px;
     }
 }
