--- a/css/main.css
+++ b/css/main.css
@@ -1204,7 +1204,8 @@ img {
 }
 
 .backdrop,
-.backdrop__qoute {
+.backdrop__qoute,
+.backdrop__swiper {
   position: fixed;
   z-index: 10;
   width: 100%;
@@ -1219,13 +1220,15 @@ img {
 }
 @media screen and (min-width: 1440px) {
   .backdrop,
-  .backdrop__qoute {
+  .backdrop__qoute,
+  .backdrop__swiper {
     overflow: hidden;
   }
 }
 
 .modal,
-.modal__quote {
+.modal__quote,
+.swiper-modal {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -1233,13 +1236,15 @@ img {
 }
 @media screen and (min-width: 744px) and (max-width: 1439px) {
   .modal,
-  .modal__quote {
+  .modal__quote,
+  .swiper-modal {
     transform: translate(-50%, -50%);
   }
 }
 @media screen and (min-width: 1440px) {
   .modal,
-  .modal__quote {
+  .modal__quote,
+  .swiper-modal {
     transform: translate(-50%, -50%);
   }
 }
@@ -2196,4 +2201,11 @@ img {
   .gallery__button__load {
     width: 194px;
   }
+}
+
+.swiper img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: contain;
+     object-fit: contain;
 }/*# sourceMappingURL=main.css.map */
