--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import './utils/variables.scss';
 
 @import './layouts/header.scss';
+@import './layouts/quote-form.scss';
 @import './layouts/section-hero.scss';
 @import './layouts/section-picture.scss';
 @import './layouts/section-help.scss';
