--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -107,9 +107,6 @@
 }
 
 .solve__text{
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
     font-family: var(--font-family);
     font-weight: 600;
     font-size: 22px;
@@ -142,4 +139,9 @@
 
 .is-hidden {
     display: none !important;
+}
+
+button:hover,
+button:focus{
+    cursor: pointer;
 }
