--- a/sass/layouts/_section-solve.scss
+++ b/sass/layouts/_section-solve.scss
@@ -72,13 +72,13 @@
 }
 
 .solve__button{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    border-radius: 32px;
-    border: none;
-    background-color: var(--black);
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
+    // width: 100%;
+    // border-radius: 32px;
+    // border: none;
+    // background-color: var(--black);
     padding: 14px;
     @include tablet{
         width: 184px;
