--- a/sass/layouts/_mobile-menu.scss
+++ b/sass/layouts/_mobile-menu.scss
@@ -35,14 +35,15 @@
     z-index: 100;
     top: 20px;
     right: 20px;
-    padding: 0;
-    width: 24px;
-    height: 24px;
+    padding:0;
+    width: 26px;
+    height: 26px;
     border: none;
     background-color: var(--bg);
+    // padding: 2px;
     @include tablet {
         top: 30px;
-        right: 45px;
+        right: 46px;
     }
 }
 
