--- a/sass/layouts/_section-advantages.scss
+++ b/sass/layouts/_section-advantages.scss
@@ -53,6 +53,9 @@
     position: absolute;
     top: 12px;
     right: 12px;
+    width: 15px;
+    height: 15px;
+    fill: var(--beidg);
 }
 
 .advantages__link{
