--- a/sass/layouts/_section-questions.scss
+++ b/sass/layouts/_section-questions.scss
@@ -70,6 +70,27 @@
     margin-left: 10px;
     margin-bottom: 0;
 }
+.questions__svg{
+    width: 24px;
+    height: 24px;
+    fill: var(--pure-white);
+}
+.questions__svg-plus{
+    width: 40px;
+    height: 40px;
+    fill: var(--beidg);
+    background-color: var(--black-2);
+    border-radius: 50px;
+    padding: 8px;
+}
+.questions__svg-cross{
+    width: 40px;
+    height: 40px;
+    border-radius: 50px;
+    padding: 8px;
+    fill: var(--beidg);
+    background-color: var(--gray);
+}
 .question__button-plus,
 .question__button-close{
     border: none;
